# Coworking_Bookings

./: .env-example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
src/: exceptions.py  main.py
src/api/: auth.py  bookings.py  coworkings.py  facilities.py  workplaces.py
src/connectors/: redis_connector.py
src/migrations/: script.py.mako
src/migrations/versions/: 2026_07_09_1511-e92dbc4d022f_initial_tables.py
src/models/: __init__.py  bookings.py  coworkings.py  facilities.py  workplaces.py
src/repositories/: base.py  bookings.py  coworkings.py  facilities.py  users.py  utils.py  workplaces.py
src/repositories/mappers/: mappers.py
src/schemas/: bookings.py  coworkings.py  facilities.py  workplaces.py
src/services/: auth.py  bookings.py  coworkings.py  workplaces.py
src/tasks/: tasks.py
src/utils/: db_manager.py
tests/: conftest.py  mock_coworkings.json  mock_workplaces.json
tests/integration_tests/auth/: test_api.py
tests/integration_tests/bookings/: test_api.py  test_db.py
tests/integration_tests/coworkings/: test_api.py  test_db.py
tests/integration_tests/facilities/: test_api.py
