[project]
name = "coworking-venv"
version = "0.1.0"
description = ""
requires-python = "==3.12.13"

authors = [
    {name = "Your Name", email = "you@example.com"}
]

dependencies = [
    "fastapi>=0.139.0,<0.140.0",
    "uvicorn>=0.51.0,<0.52.0",
    "sqlalchemy>=2.0.51,<3.0.0",
    "alembic>=1.18.5,<3.0.0",
    "asyncpg>=0.31.0,<0.32.0",
    "pydantic>=2.13.4,<3.0.0",
    "pydantic-settings>=2.14.2,<3.0.0",
    "python-dotenv>=1.2.2,<2.0.0",
    "python-multipart>=0.0.32,<0.0.33",
    "redis>=8.0.1,<9.0.0",
    "fastapi-cache2>=0.2.2,<0.3.0",
    "celery>=5.6.3,<6.0.0",
    "pendulum>=3.2.0,<4.0.0",
    "pyjwt>=2.13.0,<3.0.0",
    "email-validator>=2.3.0,<3.0.0",
    "pillow>=12.3.0,<13.0.0",
    "jinja2>=3.1.6,<4.0.0",
    "pwdlib[argon2] (>=0.3.0,<0.4.0)",
    "httpx (>=0.28.1,<0.29.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[dependency-groups]
dev = [
    "pytest (>=9.1.1,<10.0.0)",
    "pytest-dotenv (>=0.5.2,<0.6.0)",
    "pytest-asyncio (>=1.4.0,<2.0.0)"
]
